fix(docker): increase db healthcheck start_periods to prevent CI build timeout

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,8 +16,9 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U nhiadmin -d nhishield" ]
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 20s
     restart: unless-stopped
     networks:
       - nhi-network
@@ -39,8 +40,9 @@ services:
     healthcheck:
       test: [ "CMD", "cypher-shell", "-u", "neo4j", "-p", "${NEO4J_PASSWORD:?Set NEO4J_PASSWORD in .env}", "RETURN 1" ]
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 40s
     restart: unless-stopped
     networks:
       - nhi-network
@@ -56,8 +58,9 @@ services:
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 20s
     restart: unless-stopped
     networks:
       - nhi-network
@@ -80,8 +83,9 @@ services:
     healthcheck:
       test: [ "CMD", "influx", "ping" ]
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 20s
     restart: unless-stopped
     networks:
       - nhi-network
@@ -99,8 +103,9 @@ services:
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:6333/healthz" ]
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 20s
     restart: unless-stopped
     networks:
       - nhi-network
