fix(env): fix mismatched vault encryption key variable in example file

--- a/.env.example
+++ b/.env.example
@@ -85,5 +85,5 @@ ALERT_EMAIL_USER=
 ALERT_EMAIL_PASS=
 ALERT_WEBHOOK_URL=
 
-# Vault master key (alias for ENCRYPTION_KEY — used by CredentialVault)
-MASTER_KEY=CHANGE_ME_32_chars_exactly_here!
+# Vault master key (used by CredentialVault)
+MASTER_ENCRYPTION_KEY=CHANGE_ME_32_chars_exactly_here!
