--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -101,11 +101,11 @@ services:
     environment:
       QDRANT__SERVICE__API_KEY: ${QDRANT_API_KEY:?Set QDRANT_API_KEY in .env}
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:6333/healthz" ]
+      test: [ "CMD", "wget", "-qO-", "http://localhost:6333/healthz" ]
       interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 20s
+      timeout: 15s
+      retries: 15
+      start_period: 60s
     restart: unless-stopped
     networks:
       - nhi-network
