Fix integration tests setup in ci-cd workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -250,7 +250,22 @@ jobs:
       
       - name: Start services with Docker Compose
         run: |
+          # Create required directories for volume mounts
+          mkdir -p certs/api certs/ca
+          touch certs/api/api.crt certs/api/api.key certs/ca/ca.crt
+          
           cp .env.example .env
+          # Use placeholder values for required env vars to prevent docker-compose error
+          sed -i 's/CHANGE_ME_strong_password_here/ciPassword123/g' .env
+          sed -i 's/CHANGE_ME_neo4j_password_here/ciPassword123/g' .env
+          sed -i 's/CHANGE_ME_redis_password_here/ciPassword123/g' .env
+          sed -i 's/CHANGE_ME_influx_password_here/ciPassword123/g' .env
+          sed -i 's/CHANGE_ME_influx_token_here_min_16_chars/ciToken123456789/g' .env
+          sed -i 's/CHANGE_ME_qdrant_api_key_here/ciApiKey123/g' .env
+          sed -i 's/CHANGE_ME_generate_with_crypto_randomBytes_64/ciSecretKey123/g' .env
+          sed -i 's/CHANGE_ME_32_chars_exactly_here!/ciEncryptionKey32charsLong12345/g' .env
+          sed -i 's/CHANGE_ME_grafana_password_here/ciPassword123/g' .env
+          
           docker compose --project-directory . -f docker/docker-compose.yml up -d
 
       
