fix: correct CodeQL language configuration in GitHub Actions workflows
- Changed 'javascript-typescript' to 'javascript' in CodeQL init step
- Both ci.yml and ci-cd.yml workflows updated
- Fixes invalid language specification error

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -312,7 +312,7 @@ jobs:
       - name: Run CodeQL Analysis
         uses: github/codeql-action/init@v4
         with:
-          languages: javascript-typescript, python
+          languages: javascript, python
       
       - name: Autobuild
         uses: github/codeql-action/autobuild@v4
