--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,7 +81,7 @@ jobs:
           JWT_SECRET: ciTestOnlyJwtKey2026ForActions
           ENCRYPTION_KEY: ciTestOnlyEncryptionKey32charsXX
           NODE_ENV: test
-        run: npm test -- --coverage --forceExit --detectOpenHandles
+        run: npm test -- --coverage --forceExit --detectOpenHandles --runInBand
       
       - name: Upload coverage
         if: success()
@@ -271,7 +271,10 @@ jobs:
           sed -i 's/CHANGE_ME_32_chars_exactly_here!/ciTestOnlyEncryptionKey32charsXX/g' .env
           sed -i 's/CHANGE_ME_grafana_password_here/ciPassword123/g' .env
 
-          docker compose --project-directory . -f docker/docker-compose.yml up -d --build
+          # ensure required ports are free on the runner
+          fuser -k 3000/tcp || true
+          fuser -k 3001/tcp || true
+          docker compose --project-directory . --project-name nhi_ci -f docker/docker-compose.yml up -d --build
 
       - name: Wait for services and perform health checks
         run: |
